# python-app

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: black.yml  ci.yml  pytest.yml  ruff.yml
app/: __init__.py  main.py
app/tests/: __init__.py  test_main.py
