[tool.poetry]
name = "python-app"
version = "0.1.0"
description = "A python app template with dependency management and DevOps best practices."
authors = ["Yousef Abu Shanab <josephyousef249@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]
homepage = "https://github.com/youzarsiph/python-app"
repository = "https://github.com/youzarsiph/python-app"
documentation = "https://github.com/youzarsiph/python-app"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
black = "^24.10.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
